tests/neg/i1688.scala
package scala

sealed trait Null // error

trait Char // error
